--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major"> 
-									<h2><a href="https://app.powerbi.com/reportEmbed?reportId=41ef66e9-a35f-43ca-9090-3326a34b2ea1&autoAuth=true&ctid=6c19c3c3-3b26-4b32-bfde-ab1cfabf4bfb">Data Analysis of <br />
+									<h2><a href="https://app.powerbi.com/view?r=eyJrIjoiOGEzYWYzMzEtMDFiMi00MGE5LTkwNDgtNThhNDI5YmYzMzJhIiwidCI6IjZjMTljM2MzLTNiMjYtNGIzMi1iZmRlLWFiMWNmYWJmNGJmYiJ9">Data Analysis of <br />
 										Data Jobs in the US</a></h2>
 									<p>Data cleaning, analysis and visualization of data-related jobs <br />
 									in the US using Excel, Microsoft Power Tools <br />
 									and Power Bi</p>
 								</header>
-								<a href="https://app.powerbi.com/reportEmbed?reportId=41ef66e9-a35f-43ca-9090-3326a34b2ea1&autoAuth=true&ctid=6c19c3c3-3b26-4b32-bfde-ab1cfabf4bfb" class="image main"><img src="images/Data.jpg" alt="" /></a>
+								<a href="https://app.powerbi.com/view?r=eyJrIjoiOGEzYWYzMzEtMDFiMi00MGE5LTkwNDgtNThhNDI5YmYzMzJhIiwidCI6IjZjMTljM2MzLTNiMjYtNGIzMi1iZmRlLWFiMWNmYWJmNGJmYiJ9" class="image main"><img src="images/Data.jpg" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://app.powerbi.com/reportEmbed?reportId=41ef66e9-a35f-43ca-9090-3326a34b2ea1&autoAuth=true&ctid=6c19c3c3-3b26-4b32-bfde-ab1cfabf4bfb" class="button large">View Project</a></li>
+									<li><a href="https://app.powerbi.com/view?r=eyJrIjoiOGEzYWYzMzEtMDFiMi00MGE5LTkwNDgtNThhNDI5YmYzMzJhIiwidCI6IjZjMTljM2MzLTNiMjYtNGIzMi1iZmRlLWFiMWNmYWJmNGJmYiJ9" class="button large">View Project</a></li>
 								</ul>
 							</article>
 
@@ -76,33 +76,33 @@
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Primis eget<br />
-										imperdiet lorem</a></h2>
+										<h2><a href="#">Covid-19 Dashboard<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Data cleaning using SQL and data visualization using Tableau </p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Ante mattis<br />
-										interdum dolor</a></h2>
+										<h2><a href="#">Exoplanets and Astronomy<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Data analysis and visualization of Exoplanets using Pandas, Matplotlib, and numpy</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
 									<header>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<h2><a href="#">Capstone Project<br />
+										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<p>Google Data Analytics Certificate Capstone Projec</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
