--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
 										</a></h2>
 									</header>
 									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Google Data Analytics Certificate Capstone Projec</p>
+									<p>Google Data Analytics Certificate Capstone Project</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
