--- a/index.html
+++ b/index.html
@@ -65,6 +65,17 @@
 							<section class="posts">
 								<article>
 									<header>
+										<h2><a href="#">Capstone Project<br />
+										</a></h2>
+									</header>
+									<a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<p>Google Data Analytics Certificate Capstone Project</p>
+									<ul class="actions special">
+										<li><a href="#" class="button">View Project</a></li>
+									</ul>
+								</article>								
+								<article>
+									<header>
 										<h2><a href="#">Data Exploration in SQL<br />
 										</a></h2>
 									</header>
@@ -92,17 +103,6 @@
 									</header>
 									<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
 									<p>Data analysis and visualization of Exoplanets using Pandas, Matplotlib, and numpy</p>
-									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
-									</ul>
-								</article>
-								<article>
-									<header>
-										<h2><a href="#">Capstone Project<br />
-										</a></h2>
-									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Google Data Analytics Certificate Capstone Project</p>
 									<ul class="actions special">
 										<li><a href="#" class="button">View Project</a></li>
 									</ul>
