--- a/index.html
+++ b/index.html
@@ -65,13 +65,13 @@
 							<section class="posts">
 								<article>
 									<header>
-										<h2><a href="#">Capstone Project<br />
+										<h2><a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat">Bellabeat analysis using R<br />
 										</a></h2>
 									</header>
-									<a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Google Data Analytics Certificate Capstone Project</p>
+									<a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="image fit"><img src="images/bellabeat.jpg alt="" /></a>
+									<p>Google Data Analytics Certificate Capstone Project about Bellabeat company using R.</p>
 									<ul class="actions special">
-										<li><a href="#" class="button">View Project</a></li>
+										<li><a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="button">View Project</a></li>
 									</ul>
 								</article>								
 								<article>
