--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 										<h2><a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat">Bellabeat analysis using R<br />
 										</a></h2>
 									</header>
-									<a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="image fit"><img src="images/bellabeat.jpg alt="" /></a>
+									<a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="image fit"><img src="images/bellabeat.jpg" alt="" /></a>
 									<p>Google Data Analytics Certificate Capstone Project about Bellabeat company using R.</p>
 									<ul class="actions special">
 										<li><a href="https://www.kaggle.com/code/juanmatheodelgado/bellabeat" class="button">View Project</a></li>
